<resources>
    <string name="app_name">Food Huzzle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">You will soon see your offers \n</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="new_user">New user?</string>
    <string name="login_back">Back to login</string>
    <string name="back_to_home">Back to home</string>
    <string name="remember">Remember me</string>
    <string name="phone">Phone number</string>
    <string name="log_Btn">Log out</string>
    <string name="swe_Btn">swedish</string>
    <string name="suggestProd">Recommended products based on your favorite store(s)</string>
    <string name="shopCart">Shopping cart</string>
    <string name="eng_Btn">english</string>
    <string name="errorMessage">No product was found.</string>
    <string name="removeShopList">Are you sure you want to mark these products as bought and remove them from your current shopping list?</string>
    <string name="update_Btn">Update</string>
    <string name="resetPassTitle">Reset password</string>
    <string-array name="stores_array">
        <item>Choose favorite store...</item>
        <item>ICA</item>
        <item>Coop</item>
        <item>Willys</item>
        <item>LIDL</item>
    </string-array>
    <string name="favStore_UI">Favorite stores</string>
    <string name="faqtitle" translatable="false">FAQ</string>
    <string name="welcome_to_food_huzzle">Welcome to Food Huzzle!</string>
    <string name="default_notification_channel_id" translatable="false"></string>
    <string name="forgotPass">Forgot password? Click me</string>
    <string name="resetPassUnder">Please enter your email below</string>
    <string name="enterEmail">Please enter a email address</string>
    <string name="emailSuccess">Email sent</string>
    <string name="question1">How often do I get new offers?</string>
    <string name="q2">I\'ve forgotten my password</string>
    <string name="a1">The offers in the app are updated weekly when the stores updates their weekly offers</string>
    <string name="a2">Navigate to the login page, click \"Forgot password\" and follow the instructions</string>
    <string name="q3">What sources are used to retrieve prices?</string>
    <string name="a3">ICA: https://www.ica.se/butiker/maxi/karlstad/maxi-ica-stormarknad-karlstad-11010/erbjudanden/
                      COOP: https://www.coop.se/butiker-erbjudanden/coop/coop-kronoparken/
                      LIDL: https://www.lidl.se/veckans-erbjudanden
                      WILLYS: https://www.willys.se/erbjudanden/butik?StoreID=2117</string>
    <string name="q4">Do I need a account to use the app?</string>
    <string name="a4">Yes. Navigate to profile page to create an account, to start Huzzlin\'.</string>

</resources>