<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPassword">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/resetPassTitle"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textColor="@color/orange"
        />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_below="@+id/tv_logo"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/resetPassUnder"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_subtitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/anonymous_pro_bold"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/resetPassTitle"
        android:textColor="@android:color/white"
        />

</RelativeLayout>